# SLAE_Solving

./: CMakeLists.txt  README.md
SLAE_solving/: CMakeLists.txt  MatrixOperations.h  Rand_single_or_double.h  SLAE_solving.cpp  SLAE_solving.h
